# node-font-kit

./: .eslintrc.js  .eslintrc.yml  .gitignore  .npmignore  .prettierignore  Cargo.toml  README.md  cpbin.js  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
__test__/: data.ts  index.spec.ts
lib/: index.ts  types.ts
native/: Cargo.toml
native/src/: lib.rs  path.rs  props.rs
native/src/path/: coretext.rs  sys.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: family_handle.rs  family_name.rs  file_type.rs  font.rs  handle.rs  lib.rs  maybe.rs  promisify.rs  properties.rs  source.rs
src/file_type/: mod.rs
src/handle/: load.rs  mod.rs
src/source/: mod.rs
tests/: index.spec.ts
