[package]
name = "node-font-kit"
version = "0.0.1"
authors = ["\"Sotaro Tommykawa \" <tommysouta@gmail.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "font_kit"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.0"

[dependencies]
neon = "0.7.0"
font-kit = "0.10.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-text = "19.1.0"
